--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "library",
     "description": "Biblioteca para geração de boletos bancários.",
     "keywords": ["boleto", "boleto bancario"],
-    "homepage": "http://github.com/openboleto/openboleto",
+    "homepage": "https://github.com/italloh/openboleto",
     "license": "MIT",
     "minimum-stability": "RC",
     "authors": [
